[package]
name = "libcedar"
version = "0.1.0"
edition = "2021"
description = "C bindings for the Cedar policy engine — embedded PDP for PostgreSQL"
license = "Apache-2.0"

[lib]
name = "cedar"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
cedar-policy = "4.7.0"
serde_json = "1"
libc = "0.2"

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
# For integration tests that exercise FFI
libc = "0.2"
